<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.board.BoardFragment"
    tools:parentTag="android.widget.LinearLayout"
    tools:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.beam.tictactoe.ui.board.CellView
            android:id="@+id/btn_0_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            tools:text="X" />

        <com.beam.tictactoe.ui.board.CellView
            android:id="@+id/btn_0_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            tools:text="X" />

        <com.beam.tictactoe.ui.board.CellView
            android:id="@+id/btn_0_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            tools:text="X" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.beam.tictactoe.ui.board.CellView
            android:id="@+id/btn_1_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            tools:text="X" />

        <com.beam.tictactoe.ui.board.CellView
            android:id="@+id/btn_1_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            tools:text="X" />

        <com.beam.tictactoe.ui.board.CellView
            android:id="@+id/btn_1_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            tools:text="X" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.beam.tictactoe.ui.board.CellView
            android:id="@+id/btn_2_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            tools:text="X" />

        <com.beam.tictactoe.ui.board.CellView
            android:id="@+id/btn_2_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            tools:text="X" />

        <com.beam.tictactoe.ui.board.CellView
            android:id="@+id/btn_2_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            tools:text="X" />
    </LinearLayout>

</merge>