<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.board.BoardFragment">

    <com.beam.tictactoe.ui.board.BoardView
        android:id="@+id/board_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        tools:text="Game over: The winner is X" />

    <Button
        android:id="@+id/start_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Restart Game" />
</LinearLayout>