<resources>
    <string name="app_name">TicTacToe</string>
    <string name="game">Game</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="other_games">More games</string>
    <string name="welcome">Welcome to Tic-Tac-Toe Game</string>
    <string name="start_game">Start Game</string>
    <string name="play_again">Play Again</string>
    <string name="draw">It\'s a draw!</string>
    <string name="winner">Congrats! The winner is %s</string>
    <string name="number_of_moves">Number of moves: %d</string>
    <string name="empty_scoreboard">There is no scores to show</string>
</resources>